[irclog] fix stylesheet to align messages to left
git-svn-id: http://svn.pugscode.org/pugs/misc/irclog@27663 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/cgi/style.css
+++ b/cgi/style.css
@@ -123,6 +123,8 @@ abbr { cursor: help; }
 	font-weight: bold;
 }
 
+#log td.msg { text-align: left !important; }
+
 /* Nick autocomplete */
 .ac_results {
 	background: white;
